наведение на кнопки

--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -77,7 +77,7 @@ body.ui-page
                           a.ui-menu__link(href="/projects/") Проекты
                           .ui-menu__sublevel
                               .ui-menu-sublevel
-                                  a.ui-menu-sublevel__item(href="/projects/history/") Истории проектов
+                                  a.ui-menu-sublevel__item(href="") Истории проектов
                                   a.ui-menu-sublevel__item Отчеты клиентов
                                   a.ui-menu-sublevel__item Отзывы
                                   a.ui-menu-sublevel__item(href="/gallery/") Фотогалерея
