--- a/frontend/src/_styles/_variable.styl
+++ b/frontend/src/_styles/_variable.styl
@@ -14,6 +14,8 @@ $color-medium = #313131
 $color-ashgrey = #b8b8b8
 $color-whitesmoke = #f6f6f6
 $color-darkjunglegreen = #282828
+$color-redbrown = #a73328
+$color-isabelline = #ebebeb
 
 $font-rubik = 'Rubik', sans-serif;
 
