--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -339,25 +339,25 @@ block content
                     .ui-material-box(style="background-image: url('/images/material-box/drywall-bg.png')")
                         .ui-material-box__title Гипсокартон
                         .ui-material-box__link
-                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                            a.ui-circle-button.ui-circle-button--isabelline.ui-circle-button--size-md(href="#")
                                 i +
                 .col.col--xl-3.col--lg-3.col--md-6
                     .ui-material-box(style="background-image: url('/images/material-box/pvc-bg.png')")
                         .ui-material-box__title ПВХ
                         .ui-material-box__link
-                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                            a.ui-circle-button.ui-circle-button--isabelline.ui-circle-button--size-md(href="#")
                                 i +
                 .col.col--xl-3.col--lg-3.col--md-6
                     .ui-material-box(style="background-image: url('/images/material-box/glass-bg.png')")
                         .ui-material-box__title Стекло
                         .ui-material-box__link
-                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                            a.ui-circle-button.ui-circle-button--isabelline.ui-circle-button--size-md(href="#")
                                 i +
                 .col.col--xl-3.col--lg-3.col--md-6
                     .ui-material-box(style="background-image: url('/images/material-box/mdf-bg.png')")
                         .ui-material-box__title МДФ
                         .ui-material-box__link
-                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                            a.ui-circle-button.ui-circle-button--isabelline.ui-circle-button--size-md(href="#")
                                 i +
             .row
                 .col.col--xl-12
