--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -837,6 +837,7 @@ init($breakpoints, $columns)
 
 .ui-main-home
     background url('../images/main-home-bg.png') no-repeat 50% 50%
+    background-size cover
 
 .ui-price-calculate
     padding-top 44px
