--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -82,7 +82,7 @@ body.ui-page
                                   a.ui-menu-sublevel__item Отзывы
                                   a.ui-menu-sublevel__item(href="/gallery/") Фотогалерея
                       .ui-menu__item
-                          a.ui-menu__link(href="") Цены
+                          a.ui-menu__link(href="/prices/") Цены
                       .ui-menu__item
                           a.ui-menu__link(href="") Направления
                       .ui-menu__item
