--- a/frontend/src/_styles/modules/text-block.styl
+++ b/frontend/src/_styles/modules/text-block.styl
@@ -35,6 +35,12 @@
             padding-top 19px
             margin-top 20px
 
+        &--mini
+            font-size 20px
+            color #1c282a
+            line-height 32px
+            padding-top 19px
+
     &__img
         width 100%
         max-height 425px
@@ -48,6 +54,7 @@
     &__flex
         display flex
 
+    &__list
     &__content
     &__text
         padding 25px 22px 32px
@@ -65,6 +72,9 @@
 
         span
             font-weight bold
+
+    &__list
+        padding 0 22px 0
 
     &__content
         padding 20px 0 0 0
@@ -88,6 +98,10 @@
         font-weight bold
         text-align center
         padding 40px 0 20px 0
+
+        &--left
+            text-align left
+            padding 0
 
         span
             font-weight normal
