--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -891,6 +891,9 @@ init($breakpoints, $columns)
         padding 30px 0
         text-transform uppercase
 
+        &--small
+            text-transform none
+
 .ui-projects-history
     padding-bottom 30px
 
@@ -1186,3 +1189,55 @@ init($breakpoints, $columns)
     top 0
 
 @import 'catalog-detail';
+
+.ui-prices
+    padding-bottom 54px
+
+    &__photo
+        width 100%
+        height 100%
+        background-position 50% 50%
+        background-repeat no-repeat
+        background-size cover
+        box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.1)
+
+.ui-table
+    width 100%
+    margin-bottom 50px
+
+    th
+        width 50%
+        text-align left
+        background $color-darkjunglegreen
+        color #fff
+        font-family 'Panton'
+        font-size 20px
+        line-height 20px
+        font-weight normal
+        padding 28px 46px
+        border-right 1px solid #b9b9b9
+
+        &:nth-child(2n)
+            border-right none
+
+    td
+        width 50%
+        padding-left 46px
+        font-family 'Panton'
+        font-size 20px
+        color #090909
+        text-align left
+        line-height 20px
+        border-right 1px solid #b9b9b9
+
+        &:nth-child(2n)
+            border-right none
+
+    tr
+        height 70px
+        vertical-align middle
+
+        &:nth-child(2n)
+            background #f9f9f9
+        &:nth-child(1)
+            background #fff
