--- a/frontend/src/_styles/modules/steps-vertical.styl
+++ b/frontend/src/_styles/modules/steps-vertical.styl
@@ -98,3 +98,17 @@
             display inline-block
             min-width 15px
             font-family sans-serif
+
+.ui-step-light
+    list-style none
+    padding-top 20px
+
+    li
+        background url('/images/step-light.png') no-repeat 0 50%
+        padding-left 15px
+
+.ui-step-number
+    padding 20px
+
+    li
+        padding-left 10px
