--- a/frontend/src/catalog/mobile/index.jade
+++ b/frontend/src/catalog/mobile/index.jade
@@ -126,6 +126,128 @@ block content
                                     svg(xmlns="http://www.w3.org/2000/svg", xmlns:xlink="http://www.w3.org/1999/xlink", width="16px", height="8px")
                                         path(fill-rule="evenodd",  fill="rgb(249, 249, 249)", d="M8.000,7.998 L-0.001,0.001 L16.000,0.001 L8.000,7.998 Z")
                                 .ui-icon-button__text Смотреть подробнее
+                    .row.row--no-gutters
+                        .col.col--xl-12
+                            .ui-heading.ui-heading--lvl6.ui-heading--black Крепление (зависит от конфигурации): 
+                    .row.row--no-gutters
+                        .col.col--xl-12.ui-catalog-seo__list
+                            ul.ui-step-light
+                                li пол-стены-потолок, 
+                                li стены-потолок,
+                                li профиль зажимной или П-образный (Титан, Dorma и проч.; цвет - полированная нержавейка, матовая нержавейка, анодированный, возможность покраски в любой цвет по шкале RAL) 
+                                li возможность скругленных углов у невысоких перегородок при разделении рабочих мест
+                    .row.row--no-gutters
+                        .col.col--xl-12
+                            .ui-heading.ui-heading--lvl6.ui-heading--black Модельный ряд
+                    .row.row--no-gutters
+                        .col.col--xl-auto.col--md-auto.ui-catalog-seo__description
+                            p Цельностеклянные перегородки Oki-Doki Ice придают интерьерам современный вид и подходят для обустройства офисов, торговых центров, выставочных залов, спортивных и развлекательных комплексов, ресторанов, производственных и складских помещений.
+                            p Большой ассортимент цельностеклянных конструкций позволяет выбрать наиболее подходящий по стилю, функциональности и цене вариант:
+                    .row.row--no-gutters
+                        .col.col--xl-12.ui-catalog-seo__list
+                            ul.ui-step-light
+                                li с частичным или полным перекрытием по вертикали, для всего помещения или для отдельных зон;
+                                li с дверями, сквозными нишами, жалюзи;
+                                li из прозрачного стекла, тонированного, матированного, узорчатого, моллированного, Smart-стекла с регулируемой прозрачностью, прочного Триплекса;
+                                li с нанесением логотипов, рисунков, декоративных элементов.
+                    .row.row--no-gutters
+                        .grid.grid--container.ui-catalog-seo__grid
+                            .row.row--no-gutters.ui-catalog-seo__row
+                                .col.col--xl-2.ui-catalog-seo__col
+                                    img.ui-catalog-seo__img(src="/images/catalog/mobile/grid1.png", alt="")
+                                    .ui-catalog-seo__description Покраска профиля в любой цвет по шкале RAL
+                                .col.col--xl-2.ui-catalog-seo__col
+                                    img.ui-catalog-seo__img(src="/images/catalog/mobile/grid2.png", alt="")
+                                    .ui-catalog-seo__description Декорирование профиля «под дерево» – несколько вариантов декора
+                                .col.col--xl-2.ui-catalog-seo__col
+                                    img.ui-catalog-seo__img(src="/images/catalog/mobile/grid3.png", alt="")
+                                    .ui-catalog-seo__description Жалюзи горизонтальные (различных цветов)
+                                .col.col--xl-2.ui-catalog-seo__col
+                                    img.ui-catalog-seo__img(src="/images/catalog/mobile/grid4.png", alt="")
+                                    .ui-catalog-seo__description Кабель-каналы для розеток, выключателей и проч.
+                                .col.col--xl-2.ui-catalog-seo__col
+                                    img.ui-catalog-seo__img(src="/images/catalog/mobile/grid5.png", alt="")
+                                    .ui-catalog-seo__description Дополнительный вариант заполнения – 
+                                        span перфорированный стальной лист (покраска в любой цвет по шкале RAL)
+                                .col.col--xl-2.ui-catalog-seo__col
+                                    img.ui-catalog-seo__img(src="/images/catalog/mobile/grid6.png", alt="")
+                                    .ui-catalog-seo__description Усиление стоек 
+                                        span стальным сердечником или опорными стальными столбами – при невозможности крепления в потолок
+                    .row.row--no-gutters
+                        .col.col--xl-12
+                            .ui-heading.ui-heading--lvl6.ui-heading--black 10 фактов в пользу перегородок из стекла
+                    .row.row--no-gutters
+                        .col.col--xl-auto.col--md-auto.ui-catalog-seo__description
+                            p Цельностеклянные перегородки серии Oki-Doki (фото) обеспечивают баланс автономности и визуального единства, отсекают гул офисных устройств и шум голосов, их основные преимущества:
+                    .row.row--no-gutters
+                        .col.col--xl-12.ui-catalog-seo__list
+                            ol.ui-step-number
+                                li Универсальность — подходят для перепланировки и оформления помещений любого назначения.
+                                li Идеальная прозрачность и сохранение дневного освещения.
+                                li Обеспечение идеального микроклимата за счет высокой звукоизолирующей способности и сохранения тепла на уровне облицовочного кирпича (удельная теплопроводность — 0,93 Вт/ м*0К); 
+                                li Легкость монтажа, демонтажа, перекомпоновки, возможность переноса на другие площади.
+                                li Компактность — занимают меньше 1% полезной площади.
+                                li Экологичность и пожаробезопасность — не воспламеняются и не выделяют ядовитых веществ.
+                                li Не электризуются, легко чистятся.
+                                li Долго служат, сохраняя первозданный вид.
+                                li Перегородки, фурнитура и крепёжные направляющие устойчивы к окислению и коррозии.
+                                li Стойкость к ударам и механическим воздействиям.
+                    .row.row--no-gutters
+                        .col.col--xl-12
+                            .ui-heading.ui-heading--lvl5.ui-heading--black Виды секций:
+                    .row.row--no-gutters.ui-catalog-seo__flex
+                        .col.col--xl-6
+                            .ui-catalog-seo__section
+                                .ui-section
+                                    img.ui-catalog-seo__img(src="/images/catalog/mobile/section1.png", alt="")
+                                .ui-section.ui-section--column
+                                    img.ui-catalog-seo__img(src="/images/catalog/mobile/section2.png", alt="")
+                                    img.ui-catalog-seo__img(src="/images/catalog/mobile/section3.png", alt="")
+                                .ui-section
+                                    img.ui-catalog-seo__img(src="/images/catalog/mobile/section4.png", alt="")
+                                .ui-section.ui-section--column
+                                    img.ui-catalog-seo__img(src="/images/catalog/mobile/section5.png", alt="")
+                                    img.ui-catalog-seo__img(src="/images/catalog/mobile/section6.png", alt="")
+                                .ui-section.ui-section--column
+                                    img.ui-catalog-seo__img(src="/images/catalog/mobile/section5.png", alt="")
+                                    img.ui-catalog-seo__img(src="/images/catalog/mobile/section3.png", alt="")
+                        .col.col--xl-6
+                            .ui-catalog-seo__info
+                                .ui-section-info
+                                    .ui-section-info__icon i
+                                    .ui-section-info__text Нанесение логотипа, #[br]нанесение фирменного стиля #[br]путем ультрофиолетовой печати
+                    .row.row--no-gutters
+                        .col.col--xl-12
+                            .ui-heading.ui-heading--lvl5.ui-heading--black Виды заполнения:
+                    .row.row--no-gutters
+                        .col.col--xl-12
+                            .ui-heading.ui-heading--lvl5.ui-heading--black Стекло
+                    .row.row--no-gutters
+                        .col.col--xl-12
+                            .ui-catalog-seo__filling
+                                .ui-filling.ui-filling--md Защитная плёнка
+                                .ui-filling.ui-filling--md Сырое стекло
+                                .ui-filling.ui-filling--md Тонированное в массе
+                                .ui-filling.ui-filling--md Тонированное #[br]пленками
+                                .ui-filling.ui-filling--xl Матированное - матированное в массе, #[br]матированное (пескоструйная обработка)
+                                .ui-filling.ui-filling--lg Наклеивание матовой пленки
+                            .ui-catalog-seo__filling
+                                .ui-filling.ui-filling--md Триплекс
+                                .ui-filling.ui-filling--md Optiwhite
+                                .ui-filling.ui-filling--md Smart-стекло
+                                .ui-filling.ui-filling--xl Декоративное стекло - фактурное, узорчатое, #[br]моллированное стекло, акриловое
+                    hr.ui-catalog-line
+                    .row.row--no-gutters
+                        .col.col--xl-12
+                            .ui-heading.ui-heading--lvl5.ui-heading--black Двери
+                    .row.row--no-gutters
+                        .col.col--xl-12
+                            .ui-catalog-seo__filling
+                                .ui-filling.ui-filling--md дверные проёмы
+                                .ui-filling.ui-filling--md каленное стекло #[br]8-10 мм
+                                .ui-filling.ui-filling--md прозрачные
+                                .ui-filling.ui-filling--md матовые
+                                .ui-filling.ui-filling--md распашные/откатные
 
     .ui-price-calculate.grid.grid--container
         .row
