--- a/frontend/src/_styles/catalog-detail.styl
+++ b/frontend/src/_styles/catalog-detail.styl
@@ -136,6 +136,23 @@
         padding-bottom 28px
         background #fff
 
+    &__list
+        font-family 'Panton'
+        font-size 16px
+        color #090909
+        line-height 26px
+
+    &__description
+      font-family 'Panton'
+      font-size 16px
+      line-height 20px
+      color #090909
+      padding-top 20px
+
+      span
+          font-size 12px
+          line-height 16px
+
     &__text
         font-size 16px
         line-height 20px
@@ -146,6 +163,39 @@
 
         &--opened
             max-height 1200px
+
+    &__grid
+        padding-top 20px
+
+    &__row
+        border 2px solid #d9d9d9
+
+    &__col
+        border-left 2px solid #d9d9d9
+        display flex
+        flex-direction column
+        align-items center
+        padding 16px
+
+        &:first-child
+          border-left none
+
+    &__section
+        background #f9f9f9
+        padding 15px 10px
+        display flex
+        justify-content space-between
+
+    &__info
+        display flex
+
+    &__flex
+        display flex
+        align-items center
+        padding-bottom 30px
+
+    &__filling
+        display flex
 
 .ui-product-model
     background-color #fff
@@ -279,3 +329,61 @@
         height 54px
         right 0
         bottom 0
+
+.ui-section
+    display flex
+    max-width 132px
+
+    &--column
+      flex-direction column
+      justify-content space-between
+
+.ui-section-info
+    padding 30px
+    border 2px solid #e6e6e6
+    display flex
+    align-items center
+
+    &__icon
+        color #cacaca
+        border-radius 50%
+        width 56px
+        height 56px
+        border 2px solid #e6e6e6
+        display flex
+        justify-content center
+        align-items center
+
+    &__text
+        font-family 'Panton'
+        font-size 20px
+        color #090909
+        line-height 30px
+        padding-left 30px
+
+.ui-filling
+    border 2px solid #d9d9d9
+    font-family 'Panton'
+    font-size 16px
+    color #090909
+    line-height 20px
+    margin 0 10px 10px 0
+    display flex
+    justify-content center
+    align-items center
+    height 59px
+
+    &--md
+        width 180px
+
+    &--lg
+        width 270px
+
+    &--xl
+        width 376px
+
+.ui-catalog-line
+    height 6px
+    background-color #f9f9f9
+    border none
+    margin 20px 0
