--- a/frontend/src/_styles/modules/heading.styl
+++ b/frontend/src/_styles/modules/heading.styl
@@ -24,5 +24,18 @@
         font-size 26px
         line-height 32px
 
+    &--lvl5
+        font-family 'Panton'
+        font-size 20px
+        color #090909
+        line-height 20px
+        padding-bottom 15px
+
+    &--lvl6
+        font-family 'Panton'
+        font-size 16px
+        line-height 20px
+        padding-top 28px
+
     &--uppercase
         text-transform uppercase
