--- a/frontend/src/_styles/modules/gallery-cart.styl
+++ b/frontend/src/_styles/modules/gallery-cart.styl
@@ -35,6 +35,7 @@
     &__link
         height 56px
         width 56px
+        text-decoration none
         font-family 'Panton'
         font-size 50px
         color #ffffff
