--- a/frontend/src/gallery/index.jade
+++ b/frontend/src/gallery/index.jade
@@ -9,12 +9,12 @@ block content
             .row
                 .col.col--xl-12
                     .ui-page__header.ui-heading.ui-heading--lvl2.ui-heading--black фотогалерея
-            .row
+            .row.js-gallery
                 .col.col--xl-3
                     .ui-gallery-cart(style="background-image: url('/images/gallery/1.png')")
                         .ui-gallery-cart__box
                             .ui-gallery-cart__title Офисные перегородки «ОКИ-ДОКИ»
-                            .ui-gallery-cart__link +
+                            a.ui-gallery-cart__link(href="/images/gallery/1.png") +
                 .col.col--xl-3
                     .ui-gallery-cart(style="background-image: url('/images/gallery/2.png')")
                         .ui-gallery-cart__box
