--- a/frontend/src/service/certificates/index.jade
+++ b/frontend/src/service/certificates/index.jade
@@ -14,48 +14,40 @@ block content
                 .col.col--xl-3
                     .ui-certificates-cart
                         .ui-certificates-cart__title Название сертификата #[br]на две строки
-                        .ui-certificates-cart__img
-                            img(src="/images/certificates/1.png")
+                        a.ui-certificates-cart__img(style="background-image: url('/images/certificates/1.png')", href="/images/certificates/1.png")
                         .ui-certificates-cart__description Описание в несколько слов.#[br] Можно на пару строк
                 .col.col--xl-3
                     .ui-certificates-cart
                         .ui-certificates-cart__title Название сертификата #[br]на две строки
-                        .ui-certificates-cart__img
-                            img(src="/images/certificates/1.png")
+                        a.ui-certificates-cart__img(style="background-image: url('/images/certificates/1.png')", href="/images/certificates/1.png")
                         .ui-certificates-cart__description Описание в несколько слов.#[br] Можно на пару строк
                 .col.col--xl-3
                     .ui-certificates-cart
                         .ui-certificates-cart__title Название сертификата #[br]на две строки
-                        .ui-certificates-cart__img
-                            img(src="/images/certificates/1.png")
+                        a.ui-certificates-cart__img(style="background-image: url('/images/certificates/1.png')", href="/images/certificates/1.png")
                         .ui-certificates-cart__description Описание в несколько слов.#[br] Можно на пару строк
                 .col.col--xl-3
                     .ui-certificates-cart
                         .ui-certificates-cart__title Название сертификата #[br]на две строки
-                        .ui-certificates-cart__img
-                            img(src="/images/certificates/1.png")
+                        a.ui-certificates-cart__img(style="background-image: url('/images/certificates/1.png')", href="/images/certificates/1.png")
                         .ui-certificates-cart__description Описание в несколько слов.#[br] Можно на пару строк
                 .col.col--xl-3
                     .ui-certificates-cart
                         .ui-certificates-cart__title Название сертификата #[br]на две строки
-                        .ui-certificates-cart__img
-                            img(src="/images/certificates/1.png")
+                        a.ui-certificates-cart__img(style="background-image: url('/images/certificates/1.png')", href="/images/certificates/1.png")
                         .ui-certificates-cart__description Описание в несколько слов.#[br] Можно на пару строк
                 .col.col--xl-3
                     .ui-certificates-cart
                         .ui-certificates-cart__title Название сертификата #[br]на две строки
-                        .ui-certificates-cart__img
-                            img(src="/images/certificates/1.png")
+                        a.ui-certificates-cart__img(style="background-image: url('/images/certificates/1.png')", href="/images/certificates/1.png")
                         .ui-certificates-cart__description Описание в несколько слов.#[br] Можно на пару строк
                 .col.col--xl-3
                     .ui-certificates-cart
                         .ui-certificates-cart__title Название сертификата #[br]на две строки
-                        .ui-certificates-cart__img
-                            img(src="/images/certificates/1.png")
+                        a.ui-certificates-cart__img(style="background-image: url('/images/certificates/1.png')", href="/images/certificates/1.png")
                         .ui-certificates-cart__description Описание в несколько слов.#[br] Можно на пару строк
                 .col.col--xl-3
                     .ui-certificates-cart
                         .ui-certificates-cart__title Название сертификата #[br]на две строки
-                        .ui-certificates-cart__img
-                            img(src="/images/certificates/1.png")
+                        a.ui-certificates-cart__img(style="background-image: url('/images/certificates/1.png')", href="/images/certificates/1.png")
                         .ui-certificates-cart__description Описание в несколько слов.#[br] Можно на пару строк
