--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -111,7 +111,7 @@ body.ui-page
                     a.ui-logo(href="/")
                         img(src="/images/footer-logo.png")
                 .ui-address.col.col--xl-8.col--lg-6.col--md-4.text--xs-center.text--md-left Г. МОСКВА,  СОКОЛЬНИЧЕСКИЙ ВАЛ, 1А
-                .col.col--xl-2.col--lg-3.col--md-4.text--xs-center.text--lg-rigth
+                .col.col--xl-2.col--lg-3.col--md-4.text--xs-center.text--md-right
                     .ui-phone__footer.ui-phone 8 (495) 663 18 81
             .row.row--xl-center
                 .col.col--xl-2.col--lg-3.col--md-4.text--xs-center.text--md-left
