--- a/frontend/src/_styles/modules/certificates-cart.styl
+++ b/frontend/src/_styles/modules/certificates-cart.styl
@@ -15,12 +15,23 @@
         color #090909
         line-height 20px
         font-weight bold
+        height 63px
+        overflow hidden
+        padding-bottom 23px
 
     &__img
-        padding 23px 0
+        background-size contain
+        background-position 50% 50%
+        background-repeat no-repeat
+        height 274px
+        width 100%
+        outline 0
 
     &__description
+        padding-top 23px
         font-family 'Panton'
         font-size 16px
         color #090909
         line-height 20px
+        height 63px
+        overflow hidden
