--- a/frontend/src/_styles/modules/projects-cart.styl
+++ b/frontend/src/_styles/modules/projects-cart.styl
@@ -11,6 +11,7 @@
 
     &__img
         height 293px
+        background-size cover
 
     &__title
         background rgba(0, 0, 0, 0.4)
@@ -25,6 +26,7 @@
         display flex
         justify-content center
         align-items center
+        text-decoration none
 
     &__description
         background $color-whitesmoke
