--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -4,8 +4,8 @@ block config
   - var baseUrl = './'
 
 block content
+    canvas.ui-canvas.js-canvas-bg
     .ui-catalog-interactives
-        canvas.ui-canvas.js-canvas-bg
         .grid.grid--container
             .row
                 .col.col--xl-12
@@ -311,11 +311,11 @@ block content
                 .col.col--xl-3.col--lg-3.col--md-12
                     .ui-project-home__photo--small(style="background-image: url('/images/projects/1.jpg')")
                     .ui-project-home__photo--small(style="background-image: url('/images/projects/1.jpg')")
-    .ui-rewiew
-        .grid.grid--container
+    .ui-home-review
+        .grid.grid--container.ui-home-review__container
             .row
                 .col.col--xl-12
-                    .ui-heading.ui-heading--lvl2.ui-rewiew__header Офисные перегородки
+                    .ui-heading.ui-heading--lvl2.ui-home-review__header Офисные перегородки
             .row
                 .col.col--xl-6.col--lg-6.col--md-6
                     .ui-text.ui-text--bold Офисная перегородка - конструкция, главное преимущество которой – универсальность.
@@ -333,7 +333,7 @@ block content
                         .ui-text-box__text Ассортимент перегородок для офиса поражает разнообразием не только цветовых решений, но и различными вариантами декора, формы и конфигураций. В таких условиях заказать наиболее оптимальную и подходящую под конкретное помещение модель очень просто.
             .row
                 .col.col--xl-12
-                    .ui-rewiew__text.ui-text.ui-text--italic Кроме того, поверхность офисной перегородки может быть декорирована текстилем или виниловым покрытием. Вы можете заказать как типовое, так и дизайнерское оформление конструкции. Специалисты нашей компании благодаря своему большому опыту в силах реализовать любой проект.
+                    .ui-home-review__text.ui-text.ui-text--italic Кроме того, поверхность офисной перегородки может быть декорирована текстилем или виниловым покрытием. Вы можете заказать как типовое, так и дизайнерское оформление конструкции. Специалисты нашей компании благодаря своему большому опыту в силах реализовать любой проект.
             .row
                 .col.col--xl-3.col--lg-3.col--md-6
                     .ui-material-box(style="background-image: url('/images/material-box/drywall-bg.png')")
@@ -399,29 +399,29 @@ block content
                         .ui-customer-reviews__photo(style="background-image: url('/images/customer-reviews/asteros-logo.png')")
                         .ui-customer-reviews__title ООО «Астерос #[br]сервис»
                         .ui-customer-reviews__link
-                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md.js-zoom(href="#")
                                 i +
                     .ui-customer-reviews__content
                         .ui-customer-reviews__photo(style="background-image: url('/images/customer-reviews/coral-logo.png')")
                         .ui-customer-reviews__title ООО «Корал#[br] тревел»
                         .ui-customer-reviews__link
-                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md.js-zoom(href="#")
                                 i +
                     .ui-customer-reviews__content
                         .ui-customer-reviews__photo(style="background-image: url('/images/customer-reviews/m-logistic-logo.png')")
                         .ui-customer-reviews__title ООО «М-Логистик#[br] Компани»
                         .ui-customer-reviews__link
-                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md.js-zoom(href="#")
                                 i +
                     .ui-customer-reviews__content
                         .ui-customer-reviews__photo(style="background-image: url('/images/customer-reviews/swsoft-logo.png')")
                         .ui-customer-reviews__title ООО «СВсофт #[br] МФТИ»
                         .ui-customer-reviews__link
-                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                            a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md.js-zoom(href="#")
                                 i +
                                 
     .ui-companies
-        .grid.grid--container
+        .grid.grid--container.ui-companies__container
             .row.row--xl-center
                 .col.col--xl-12
                     .ui-companies__header Нас выбирают
