--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -52,15 +52,33 @@ body.ui-page
                           a.ui-menu__link(href="/catalog/") Каталог
                           .ui-menu__sublevel
                               .ui-menu-sublevel
-                                  a.ui-menu-sublevel__item Мобильные перегородки
-                                  a.ui-menu-sublevel__item Стационарные перегородки
-                                  a.ui-menu-sublevel__item Лёгкие эконом-перегородки
-                                  a.ui-menu-sublevel__item Cтеклянные перегородки
-                                  a.ui-menu-sublevel__item Офисная мебель
-                                  a.ui-menu-sublevel__item Двери
-                                  a.ui-menu-sublevel__item Входные группы
-                                  a.ui-menu-sublevel__item Стеклянные двери
-                                  a.ui-menu-sublevel__item Сантехнические перегородки
+                                  a.ui-menu-sublevel__item 
+                                      .ui-product-cart-menu(style="background-image: url('/images/catalog/menu/mobile.png')") 
+                                          .ui-product-cart-menu__link Мобильные перегородки
+                                  a.ui-menu-sublevel__item 
+                                      .ui-product-cart-menu(style="background-image: url('/images/catalog/menu/fixed.png')") 
+                                          .ui-product-cart-menu__link Стационарные перегородки
+                                  a.ui-menu-sublevel__item 
+                                      .ui-product-cart-menu(style="background-image: url('/images/catalog/menu/additional.png')") 
+                                          .ui-product-cart-menu__link Лёгкие эконом-перегородки
+                                  a.ui-menu-sublevel__item 
+                                      .ui-product-cart-menu(style="background-image: url('/images/catalog/menu/celnostekljannye-peregorodki.png')") 
+                                          .ui-product-cart-menu__link Cтеклянные перегородки
+                                  a.ui-menu-sublevel__item 
+                                      .ui-product-cart-menu(style="background-image: url('/images/catalog/menu/furniture.png')") 
+                                          .ui-product-cart-menu__link Офисная мебель
+                                  a.ui-menu-sublevel__item 
+                                      .ui-product-cart-menu(style="background-image: url('/images/catalog/menu/santehnicheskie-peregorodki.png')") 
+                                          .ui-product-cart-menu__link Сантехнические перегородки
+                                  a.ui-menu-sublevel__item
+                                      .ui-product-cart-menu(style="background-image: url('/images/catalog/menu/dveri.png')") 
+                                          .ui-product-cart-menu__link Двери
+                                  a.ui-menu-sublevel__item
+                                      .ui-product-cart-menu(style="background-image: url('/images/catalog/menu/vhodnye-gruppy.png')") 
+                                          .ui-product-cart-menu__link Входные группы
+                                  a.ui-menu-sublevel__item
+                                      .ui-product-cart-menu(style="background-image: url('/images/catalog/menu/steklyannye-dveri.png')") 
+                                          .ui-product-cart-menu__link Стеклянные двери
                       .ui-menu__item
                           a.ui-menu__link(href="/configurations/") Конфигурации
                       .ui-menu__item
