--- a/frontend/src/_styles/modules/product-cart.styl
+++ b/frontend/src/_styles/modules/product-cart.styl
@@ -130,3 +130,21 @@
         right 0
         width 60px
         height 60px
+
+.ui-product-cart-menu
+    height 158px
+    width 293px
+
+    &__link
+        font-family 'OpenSans'
+        font-size 16px
+        color #fff
+        background rgba(0, 0, 0, 0.3)
+        display flex
+        width 100%
+        height 100%
+        justify-content center
+        align-items center
+
+    &:hover &__link
+        background rgba(176, 95, 88, 0.6)
