--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -52,7 +52,7 @@ init($breakpoints, $columns)
 
 .ui-content
     position relative
-    
+
 .ui-text-page
     padding-bottom 35px
 
@@ -339,7 +339,7 @@ init($breakpoints, $columns)
 
 .ui-home-review
     color #313131
-    
+
     &__container
         background linear-gradient(to bottom, #ececec 322px, #fff 322px, #fff 100%)
 
@@ -387,7 +387,7 @@ init($breakpoints, $columns)
     font-family 'Rubik'
     font-size 26px
     color #393939
-    
+
     &__container
         background #fff
         padding-bottom 30px
@@ -906,6 +906,7 @@ init($breakpoints, $columns)
         &--small
             text-transform none
 
+
 .ui-projects-history
     padding-bottom 30px
 
@@ -1254,3 +1255,8 @@ init($breakpoints, $columns)
             background #f9f9f9
         &:nth-child(1)
             background #fff
+
+.ui-configurations-page
+    background url('../images/configurations-page-detail-bg.png') no-repeat 50% 50%
+    background-size cover
+    padding-bottom 40px
