--- a/frontend/src/_styles/modules/configurations-cart.styl
+++ b/frontend/src/_styles/modules/configurations-cart.styl
@@ -22,7 +22,7 @@
         justify-content center
         font-weight bold
         position relative
-        
+
         &:before
             position absolute
             width 100%
@@ -32,7 +32,7 @@
             content ' '
             display block
             background rgba(0, 0, 0, .4)
-        
+
         & span
             z-index 1
             position relative
@@ -49,3 +49,76 @@
         line-height 26px
         font-weight bold
         padding-bottom 29px
+
+.ui-configurations-cart-detail
+    box-shadow 0px 3px 10px 0px rgba(0, 0, 0, 0.1)
+    width 100%
+    margin-top 40px
+    position relative
+
+    &__img
+        background-repeat no-repeat
+        background-position 50% 50%
+        background-size cover
+        width 100%
+
+    &__header
+        display flex
+        justify-content center
+        align-items center
+        flex-direction column
+        height 293px
+        font-family 'Panton'
+        color #fff
+        background rgba(0, 0, 0, 0.7)
+
+    &__number
+        font-size 32px
+        border 2px solid #fff
+        border-radius 50%
+        height 76px
+        width 76px
+        display flex
+        justify-content center
+        align-items center
+
+    &__description
+        padding-top 45px
+        font-size 26px
+        text-align center
+
+    &__footer
+        background #fff
+
+    &__title
+        margin 0 10px 23px
+        border-bottom 1px solid #f2f2f2
+        line-height 64px
+        font-family 'Panton'
+        font-size 20px
+        font-weight bold
+        color #282828
+
+    &__text
+        padding 0 54px 20px 10px
+        font-family 'Panton'
+        font-size 16px
+        color #282828
+        line-height 20px
+
+    &__link
+        position absolute
+        bottom 0
+        right 0
+        height 54px
+        width 54px
+
+    &:hover &__link
+        & .ui-circle-button
+            &:before
+                background-color $color-darkcoral
+                transition background-color .25s ease-out
+
+    &:hover &__header
+        background-color rgba(214, 80, 69, 0.7)
+        transition background-color .25s ease-out
